test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/02-trigger.yaml
apiVersion: v1
data:
  sj: js
kind: ConfigMap
metadata:
  name: cm-2
  namespace: poltest
