test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/04-modifysource.yaml
apiVersion: v1
data:
  foo: aGVyZWlzY2hhbmdlZGRhdGE=
kind: Secret
metadata:
  name: regcred
  namespace: poltest
type: Opaque
