test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poltest
