test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: regcred
  namespace: poltest
type: Opaque
