test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-sync-clone
  namespace: poltest
spec:
  rules:
  - generate:
      apiVersion: v1
      clone:
        name: regcred
        namespace: poltest
      kind: Secret
      name: myclonedsecret
      namespace: poltest
      synchronize: true
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
    name: gen-zk
