test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/chainsaw-step-03-assert-1-1.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: myclonedsecret
  namespace: poltest
type: Opaque
