test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/chainsaw-step-05-assert-1-1.yaml
apiVersion: v1
data:
  foo: aGVyZWlzY2hhbmdlZGRhdGE=
kind: Secret
metadata:
  name: myclonedsecret
  namespace: poltest
type: Opaque
