test/conformance/chainsaw/generate/policy/standard/clone/sync/pol-clone-sync-modify-source/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-clone-sync-modify-source
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: permissions.yaml
    - apply:
        file: chainsaw-step-01-apply-1-1.yaml
    - apply:
        file: chainsaw-step-01-apply-1-2.yaml
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-sync-clone
        - name: namespace
          value: poltest
  - name: step-02
    try:
    - apply:
        file: chainsaw-step-02-apply-1-1.yaml
  - name: step-03
    try:
    - assert:
        file: chainsaw-step-03-assert-1-1.yaml
  - name: step-04
    try:
    - apply:
        file: chainsaw-step-04-apply-1-1.yaml
  - name: step-05
    try:
    - assert:
        file: chainsaw-step-05-assert-1-1.yaml
